Fix overflow issue

--- a/src/components/controls/DropdownMenu.scss
+++ b/src/components/controls/DropdownMenu.scss
@@ -21,7 +21,7 @@
     top: 100%;
     left: 0;
     background: white;
-    z-index: 2;
+    z-index: 4;
     color: $black;
     box-shadow: $box-shadow;
 
